--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-
-
-<header>
+<html lang="en" class="no-js cookie_used_true">
+<head>
+  <meta charset="UTF-8">
+  <title>wk33-1-challenge</title>
+  <link rel="stylesheet" media="all" href="main.css" />
+</head>
+  <body>
+  <header>
   <h1>A Website</h1> <img src="http://lorempixel.com/400/200/">
   <nav> <a href="#home">Home</a> <a href="#about">About</a> <a href="#contact">Contact</a> </nav>
 </header>
@@ -47,3 +52,5 @@
     <p>Maybe some other stuff?</p>
   </div>
 </footer>
+  </body>
+</html>
